# Keyboard-Shop

./: README.md
backend/: .gitignore  pyproject.toml
backend/api/: .coverage  db.sqlite3
backend/api/api/: config.py  settings.py
backend/api/keyboardApi/: apps.py
backend/api/keyboardApi/tests/: test.py
